--- a/style.css
+++ b/style.css
@@ -1,23 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+    background-color: #f2f2f2;
 }
 
-.box {
-    width: 150px;
-    height: 80px;
-    border: 5px solid black;
-    margin: 20px auto;
-}
-.CSE{
-    padding: 10px;
-    background-color: rgb(47, 119, 95);
-}
-.EEE{
-    padding: 20px;
-    background-color: rgb(131, 163, 89);
-}
-.JS {
-    padding: 30px;
-    background-color: rgb(197, 150, 197);
+p {
+    color: darkgreen;
 }
